[package]
name = "os_balloon"
version = "2.0.0-dev"
authors = [
    "Razican <razican@protonmail.ch>",
]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/OpenStratos/server-rs"
homepage = "https://openstratos.org/"
description = """\
Stratospheric balloon control software.
"""
keywords = ["OpenStratos", "stratosphere", "raspberry", "balloon", "science"]
categories = ["science"]

[badges]
travis-ci = { repository = "OpenStratos/server-rs", branch = "master" }
codecov = { repository = "OpenStratos/server-rs", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "OpenStratos/server-rs" }
is-it-maintained-open-issues = { repository = "OpenStratos/server-rs" }

[lib]
name = "os_balloon"
path = "src/lib.rs"

[[bin]]
name = "launcher"
path = "src/main.rs"

[features]
default = ["gps", "raspicam", "fona", "telemetry"]
# GPS feature.
gps = ["sysfs_gpio", "tokio-serial"]
# Raspberry Pi camera.
raspicam = []
# Adafruit FONA GSM module.
fona = ["sysfs_gpio", "tokio-serial"]
# Do not send SMSs (so that it does not cost money)
no_sms = ["fona"]
# Transparent serial telemetry.
telemetry = ["tokio-serial"]
# Do not ever power off the system, only exit.
no_power_off = []

[dependencies]
failure = "0.1.5"
lazy_static = "1.2.0"
toml = "0.4.10"
log = "0.4.6"
colored = "1.7.0"
chrono = "0.4.6"
libc = "0.2.48"
serde = { version = "1.0.85", features = ["derive"] }
sysfs_gpio = { version = "0.5.3", optional = true }
tokio-serial = { version = "3.2.0", optional = true }

[dependencies.log4rs]
version = "0.8.1"
default_features = false
features = ["file", "file_appender", "console_appender", "threshold_filter"]

# The release profile, used for `cargo build`.
[profile.dev]
incremental = true
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
panic = 'unwind'

# The release profile, used for `cargo build --release`.
[profile.release]
incremental = false
opt-level = 3
debug = false
rpath = false
codegen-units = 1
lto = true
debug-assertions = false
panic = 'unwind'
